hphp/test/quick/memoize_toplevel.php.expectf

Fatal error: <<__Memoize>> does not support top-level functions yet in %s/test/quick/memoize_toplevel.php on line 3
